<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical"
    tools:context="com.tcs.vikrela.fragments.HawkerFragment">
    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="80dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.55">

        <Button
            android:paddingTop="50dp"
            android:id="@+id/btnScanQR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:background="@drawable/abc_alpha_btn_background"
            android:padding="10dip"
            android:text="@string/scanQR"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="OR"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_weight="0.005"
        android:textSize="20dp"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.075"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etLicenseNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:layout_centerInParent="true"
            android:layout_marginRight="20dip"
            android:layout_marginLeft="20dip"
            android:singleLine="true"
            android:hint="@string/license"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <Button
            android:id="@+id/btnEnter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etLicenseNumber"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dip"
            android:background="@drawable/abc_alpha_btn_background"
            android:text="@string/submit"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>

    </RelativeLayout>

</LinearLayout>
